[package]
name = "minecraftServerUpdater"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
fs_extra = "1.3.0"
pathbuf = "1.0.0"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"]}
